--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tailwindcss/vite": "^4.1.1",
     "aos": "^2.3.4",
     "tailwindcss": "^4.1.1",
-    "vue": "^3.5.13"
+    "vue": "^3.5.13",
+    "vue3-carousel": "^0.15.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
